--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,3 +1,23 @@
-<p>
-  test works!
-</p>
+<h2 *ngIf="displayName; else elseBlock">Simanchala</h2>
+<ng-template #elseBlock>
+  <h2>Name is hidden.</h2>
+</ng-template>
+
+<div *ngIf="displayName; then thenBlock; else elseBlock1"></div>
+<ng-template #thenBlock>
+  <h2>Simanchala</h2>
+</ng-template>
+<ng-template #elseBlock1>
+  <h2>Hidden</h2>
+</ng-template>
+
+<div [ngSwitch]="color">
+  <div *ngSwitchCase="'red'"> We picked red color</div>
+  <div *ngSwitchCase="'blue'"> We picked blue color</div>
+  <div *ngSwitchCase="'green'"> We picked green color</div>
+  <div *ngSwitchDefault> We picked default color</div>
+</div>
+
+<div *ngFor="let color of colors; index as i; first as f; last as l; odd as o; even as e;">
+  <h2>{{ i }} {{ f }} {{ l }} {{ e }}  {{ o }} {{ color }}</h2>
+</div>
